# food_categorizer

./: .gitignore  Gemfile  README.md  _config.yml  _index-liquid-rendered.md  create_sqllite_db.py  dev-notes.md  food-categorizer  fooddata-vegattributes  index.md  pyproject.toml  reference_samples.csv  setup.cfg
.gh-pages/: generate-pages.py
.gh-pages/content/: _config.yml  _index-liquid-rendered.md  categories-toc.md  dev-notes.md  index.md
.github/workflows/: generate-and-deploy.yml
category-lists/: omni.md  uncategorized.md
dev/: generate-readme.py
food_categorizer/: categorizer.py  food_database.py  main.py  models.py  utils.py
food_categorizer/app/: generate.py  input_reference_samples.py
fooddata_vegattributes/: abstract_food_store.py  abstract_indexed_fooddata.py  abstract_reference_sample_store.py  auto_indexed_fooddata.py  auto_indexed_fooddata_food_store.py  categorization.py  category.py  combined_heuristic.py  compressed_indexed_fooddata.py  csv_reference_sample_store.py  description_based_heuristic.py  fdc_app.py  food.py  fooddata.py  indexed_fooddata_food_store.py  ingredient_based_heuristic.py  reference_sample.py  reference_samples_csv.py  vegattributes_dict.py
fooddata_vegattributes/app/: annotate_reference_samples.py  cli.py  default_paths.py  generate.py  input_reference_samples.py  list_by_veg_and_fdc_categories.py  with_default_paths.py
fooddata_vegattributes/utils/: close_on_exit.py  close_stack_owner.py  close_via_stack.py  enum.py  general.py  parsing.py  random.py  terminal_ui.py
tests/: test_reference_sample_based.py
(+30 files in other folders)
