[metadata]
name = food-categorizer
version = 1.1.0

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.extras_require]
test = pytest~=7.1; mypy~=0.950; pytest-cov~=3.0
dev = pre-commit~=2.20

[options.entry_points]
console_scripts =
  food-categorizer = food_categorizer.main:main
